/*
 * Copyright 2021 Google LLC. All rights reserved.
 *
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this
 * file except in compliance with the License. You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF
 * ANY KIND, either express or implied. See the License for the specific language governing
 * permissions and limitations under the License.
 */

#import "GRSCBottomPanelViewConstants.h"

// Bottom panel button constants.
NSString *const GRSCBottomPanelRequestRideButtonText = @"REQUEST RIDE";
NSString *const GRSCBottomPanelConfirmPickupButtonText = @"CONFIRM PICKUP";
NSString *const GRSCBottomPanelConfirmPickupPointButtonText = @"CONFIRM PICKUP POINT";
NSString *const GRSCBottomPanelConfirmDropoffButtonText = @"CONFIRM DROPOFF";
NSString *const GRSCBottomPanelConfirmTripButtonText = @"CONFIRM TRIP";
NSString *const GRSCBottomPanelCancelRideButtonText = @"CANCEL RIDE";

// Bottom panel title constants.
NSString *const GRSCBottomPanelSelectPickupLocationTitleText = @"Choose a pickup location";
NSString *const GRSCBottomPanelLocationSelectionPickupPointTitleTextHead =
    @"We found you the nearest available pickup point!\nWalk ";
NSString *const GRSCBottomPanelLocationSelectionPickupPointTitleTextTail =
    @" meters to meet your driver.";
NSString *const GRSCBottomPanelSelectDropoffLocationTitleText = @"Choose a drop-off location";
NSString *const GRSCBottomPanelWaitingForDriverMatchTitleText = @"Waiting for driver match";
NSString *const GRSCBottomPanelEnrouteToPickupTitleText = @"Driver is arriving at pickup";
NSString *const GRSCBottomPanelArrivedAtPickupTitleText = @"Driver is at pickup";
NSString *const GRSCBottomPanelEnrouteToIntermediateDestinationTitleText =
    @"Driving to intermediate stop";
NSString *const GRSCBottomPanelArrivedAtIntermediateDestinationTitleText =
    @"Arrived at intermediate stop";
NSString *const GRSCBottomPanelEnrouteToDropoffTitleText = @"Driving to dropoff";
NSString *const GRSCBottomPanelTripCompleteTitleText = @"Trip Complete";
NSString *const GRSCBottomPanelDriverPickingAnotherRiderUpText =
    @"Driver is picking another rider up";
NSString *const GRSCBottomPanelDriverDroppingAnotherRiderOffText =
    @"Driver is dropping another rider off";
NSString *const GRSCBottomPanelDriverStoppingForAnotherRiderText =
    @"Driver is stopping for another rider";
NSString *const GRSCBottomPanelLocationSelectionFailedTitleText =
    @"No available pickup point nearby.\nPlease select another pickup location.";

// Bottom panel location constants.
NSString *const GRSCBottomPanelPickupLocationText = @"pickup location";
NSString *const GRSCBottomPanelPickupPointText = @"pickup point";
NSString *const GRSCBottomPanelDropoffLocationText = @"drop-off location";
NSString *const GRSCBottomPanelSharedTripTypeLabelText = @"Shared Trip";
