...
/// A journey sharing view containing `ControlPanelView` as well as `MapViewControllerBridge`.
struct JourneySharingView: View {
  @EnvironmentObject var modelData: ModelData

  private static let notificationIdentifier = "NotificationIdentifier"

  private static let mapViewIdentifier = "MapView"

  var body: some View {
    VStack(alignment: .center) {
      MapViewControllerBridge()
        .edgesIgnoringSafeArea(.all)
        .accessibilityIdentifier(JourneySharingView.mapViewIdentifier)
...
